--- a/css/web.css
+++ b/css/web.css
@@ -551,3 +551,44 @@ td.ui-datepicker-other-month span{color: #88361f;}
         padding: 10px;
     }
 }
+
+/*Title Box*/
+
+.title_box {
+    /*border-top:1px solid #c0c0c0;
+    border-bottom:1px solid #fff;*/
+   /* width:472px;*/
+    margin:50px auto}
+
+.full_kit .title_box:first-child {
+    margin:20px auto 30px auto}
+
+.title_box .title_box_inner {
+   /* border-top:1px solid #fff;
+    border-bottom:1px solid #c0c0c0;*/
+    padding:20px 0}
+
+.title_box h2 {
+    font-size:42px;
+    font-weight:bold;
+    color:#111;
+    margin-bottom:10px;
+
+    font-size: 42px;
+    font-weight: bold;
+    margin-right: 15px;
+  
+
+
+    color: #fff;
+    text-shadow: 0 2px 1px #000;
+    -webkit-font-smoothing: antialiased;
+
+}
+
+.title_box p {
+    color:#e99f00;
+    font-size:15px;
+    text-shadow:0 1px 1px #fff;
+    font-weight:bold;}
+
