--- a/partials/login.html
+++ b/partials/login.html
@@ -135,7 +135,7 @@
                                 </div>
                                 <div class="rowSubmit">
                                     <span class="forget_password"><a href="#" hidefocus="true" style="outline: none;">Forgot Password</a></span>
-                                    <span class="btn btn-blue btn-icon-left"><input type="submit" name="login-submit" id="login-submit" value="Submit" hidefocus="true" style="outline: none;"></span>
+                                    <span class="btn btn-blue btn-icon-left mySubmit"><input type="submit" name="login-submit" id="login-submit" value="Submit" hidefocus="true" style="outline: none;"></span>
                                 </div>
                             </form>
                         </div>
